force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__ACH_Block_Request_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__ACH_Block_Request_Type__c</fullName>
    <label>ACH Block Request Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Revise</fullName>
            </value>
            <value>
                <fullName>Delete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>