force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__Customer_Contact_for_Rejects__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Customer_Contact_for_Rejects__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Customer Contact for Rejects</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Automated Clearing House Service</relationshipLabel>
    <relationshipName>Automated_Clearing_House_Service</relationshipName>
    <type>Lookup</type>
</CustomField>