force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__EDI_Reporting__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EDI_Reporting__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Check if customer would like EDI Reporting</description>
    <label>EDI Reporting</label>
    <type>Checkbox</type>
</CustomField>