force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__EDI_Reporting_Format__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EDI_Reporting_Format__c</fullName>
    <description>The format in which the customer would like their EDI Report.</description>
    <label>EDI Reporting Format</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>HTML</fullName>
            </value>
            <value>
                <fullName>PDF</fullName>
            </value>
            <value>
                <fullName>Text</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>