force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__EDI_Reporting_Type__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__EDI_Reporting_Type__c</fullName>
    <description>The type of report that the Customer requested for EDI Reporting.</description>
    <label>EDI Reporting Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Detail</fullName>
            </value>
            <value>
                <fullName>Summary</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>