force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Effective_Date__c</fullName>
    <label>Effective Date</label>
    <type>Date</type>
</CustomField>