force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__Originator_Name__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Originator_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Originator Name</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Automated Clearing House Service (Originator Name)</relationshipLabel>
    <relationshipName>Automated_Clearing_House_Service1</relationshipName>
    <type>Lookup</type>
</CustomField>