force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__Request_Expiration__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Request_Expiration__c</fullName>
    <label>Request Expiration</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Recurring</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
            <value>
                <fullName>No Expiration</fullName>
            </value>
            <value>
                <fullName>Specified Expiration</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>