force-app/main/default/objects/LLC_BI__Automated_Clearing_House_Service__c/fields/LLC_BI__Select_Applicable_Accounts_to_Block__c.field-meta.xml
<CustomField>
    <fullName>LLC_BI__Select_Applicable_Accounts_to_Block__c</fullName>
    <description>Is it possible to have the Records from the Deposit Object related to an Account display in this multi-select picklist?</description>
    <label>Select Applicable Accounts to Block</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Test</fullName>
            </value>
            <value>
                <fullName>Populate from Deposit Object</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>